k8s/laravel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-octane
spec:
  replicas: 3                     # 3 реплики для масштабирования
  selector:
    matchLabels:
      app: laravel-octane
  template:
    metadata:
      labels:
        app: laravel-octane
    spec:
      containers:
      - name: app
        image: laravel-octane:latest
        command:
          - php
          - artisan
          - octane:start
          - --server=swoole
          - --host=0.0.0.0
          - --port=80
          - --workers=4
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          runAsNonRoot: false
        resources:
          requests:
            cpu: "200m"
          limits:
            cpu: "800m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-octane
spec:
  selector:
    app: laravel-octane
  ports:
    - port: 80
      targetPort: 80
